# afmpb

./: .gitignore  CMakeLists.txt  README.md  _config.yml  example.md  index.html  index.md  install.md  ref.md
_layouts/: default.html
contrib/: CMakeLists.txt
css/: main.css
example/: GLY.pqr  GLY.pqr-mesh.dat-d20-r0.5  README  fas2.off  fas2.out  fas2.pqr  parsePQR.sh
include/: CMakeLists.txt  afmpb.h  afmpb_lhs.h  afmpb_rhs.h  afmpb_serializer.h  dafmpb.h  dafmpb_lhs.h  dafmpb_rhs.h  dafmpb_serializer.h  fmm97NL3_method.h
src/: CMakeLists.txt  afmpb.cc  afmpb_action.cc  afmpb_gmres.cc  afmpb_initfini.cc  afmpb_lhs.cc  afmpb_mesh.cc  dafmpb.cc  dafmpb_action.cc  dafmpb_gmres.cc  dafmpb_initfini.cc  dafmpb_lhs.cc  dafmpb_mesh.cc  main.cc
